# advent-of-code

./: .gitignore  get_input.py  pyproject.toml
.config/: dotnet-tools.json
2015/: 01.fsx  01.worksheet.sc  02.fsx  02.worksheet.sc  03.py  03.worksheet.sc  04.py  04.worksheet.sc  05.py  05.worksheet.sc  06.py  06.worksheet.sc  07.worksheet.sc  08.worksheet.sc  09.worksheet.sc  common.fsx
2016/01/: .editorconfig  (+3 more)
2017/: 03-scratch.xlsx  Day01.fsx  Day02.fsx  Day03.fsx  Day04.fsx  Day05.fsx  Day06.fsx  Day07.fsx  Day08.fsx  Day09.fsx  Day10.fsx  Day11.fsx  Day12.fsx  Day13.fsx  Day14.fsx  Day15.fsx  Day16.fsx  Day17.fsx  common.fsx
2018/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py
2019/: 01.py  02.py  03.py  04.py  05.py  06.py  build.sbt  tags
2020/: 01.py  01.worksheet.sc  02.py  02.worksheet.sc  03.py  03.worksheet.sc  04.py  04.worksheet.sc  05.py  06.py  07.py  08.py  09.py  09e.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  20.py  20_2.py  21.py  22.py  23.py  24.py  25.py  25.worksheet.sc
2021/: 01.worksheet.sc  02.worksheet.sc  03.worksheet.sc  04.worksheet.sc  05.worksheet.sc  06.worksheet.sc  07.worksheet.sc  08.worksheet.sc  09.worksheet.sc  10.worksheet.sc  11.ipynb  11.worksheet.sc  12.worksheet.sc  13.worksheet.sc  14.worksheet.sc  15.worksheet.sc  16.worksheet.sc  17.worksheet.sc
2022/: 01.ipynb  01.py  01.ts  02.ipynb  03.ipynb  04.ipynb  05.ipynb  06.ipynb  07.ipynb  pyproject.toml
2023/: 01.py  02.py  03.py  04.py  05.py  06.py  08.py  09.py  template.py
2024/: 01.py  02.py
(+34 files in other folders)
