[tool.poetry]
name = "2022"
version = "0.1.0"
description = ""
authors = ["Michael Forman"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
advent-of-code-data = "^1.3.0"
ipykernel = "^6.17.1"
numpy = "^1.23.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
